--- a/taco-cloud/src/main/resources/templates/home.html
+++ b/taco-cloud/src/main/resources/templates/home.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-    <head>
-        <title>Taco Cloud</title>
-    </head>
+<head>
+    <title>Taco Cloud</title>
+</head>
 
-    <body>
-        <h1>Welcome to...</h1>
-        <img th:src="@{/images/TacoCloud.png}" />
-    </body>
+<body>
+    <h1>Welcome to...</h1>
+    <img th:src="@{/images/TacoCloud.png}" />
+
+    <form method="POST" th:action="@{/logout}">
+        <input type="submit" value="Logout" />
+    </form>
+
+</body>
 
 </html>
